[package]
name = "wiki"
version = "0.1.0"
edition = "2021"
authors = ["Angel~👼 <angelj@hey.com>"]
description = "Execute prefix-based bulk page relocation on a wiki.js instance via GraphQL."
repository = "https://github.com/twnk/wikcli"
license = "GPL-3.0-only"
keywords = ["cli", "wiki", "graphql"]
categories = ["command-line-utilities"]
exclude = ["src/creds.rs"] # TODO: ENV var or flag for credentials

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI 
owo-colors = { version = "3.2.0", features = [ "supports-colors" ] }
enable-ansi-support = "0.1.2"
clap = { version = "3.1.5", features = [ "derive", "unicode", "wrap_help" ] }
console = "0.15.0"
dialoguer = "0.10.0"
human-panic = "1.0.3"
confy = "0.4.0"

# Wiki / GraphQL
cynic = { version = "1.0.0", features = [ ] }

# Http
reqwest = { version = "0.11", features = [ "rustls-tls-webpki-roots", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }

# General
itertools = "0.10.3"
anyhow = "1.0"
serde = "1.0.136"
futures = "0.3.21"

[dev-dependencies]
insta = "0.16" # debugging cynic